<resources>
    <string name="app_name">Note_app_API</string>
    <string name="edit_note_title">Title:</string>
    <string name="edit_note_description">Description:</string>
    <string name="edit_note_cancel">Cancel</string>
    <string name="edit_note_save">Save</string>
    <string name="edit_note_field_title">note title</string>
    <string name="edit_note_field_description">note description</string>
    <string name="add_new_note">Add new note</string>
</resources>