<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="2"
    >
    <TableRow
        android:id="@+id/row_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/note_titleTextView"
            android:text="@string/edit_note_title"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/note_title_EditText"
            android:text=""
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:contentDescription="@string/edit_note_field_title"
            android:importantForAutofill="no"/>
    </TableRow>
    <TableRow
        android:id="@+id/row_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/note_description_TextView"
            android:text="@string/edit_note_description"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/note_description_EditText"
            android:text=""
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:contentDescription="@string/edit_note_field_description"
            android:importantForAutofill="no"/>
    </TableRow>
    <TableRow
        android:id="@+id/row_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/CancelBTN"
            android:text="@string/edit_note_cancel"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange1"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/SaveBTN"
            android:text="@string/edit_note_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange1"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>

</TableLayout>